GNOME Bugzilla – Bug 696916
videofilter doesn't add caps in pool config
Last modified: 2013-04-04 08:44:54 UTC
Results in warning from gstvideopool (no caps in config)
Created attachment 240172 [details] [review] Patch This fixes the warning. Not sure if it is a proper fix though.
commit c78cbd0d95a2608656b739d6c17e57f49433e288 Author: Matej Knopp <matej.knopp@gmail.com> Date: Sat Mar 30 17:39:39 2013 +0100 videofilter: add caps to pool config Does not cause problems but it fixes a warning in the log. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=696916